--- a/index.html
+++ b/index.html
@@ -11,5 +11,90 @@
     Open the developer console by right clicking anywhere inside the page and selecting
     <strong>Inspect (chrome) or Inspect Element (firefox)</strong>
   </div>
+  
+
+  <script>
+	var now = new Date();
+	var num1 =0;
+	var num2 =0;
+	var i=0;
+	var word =" ";
+	var newword=" ";
+	//------------------------------------------
+	
+	alert ("Console & Alert - Hello world");
+	console.log("Console & Alert - Hello world");
+	//------------------------------------------	
+	
+	alert( `Write the hour - Hours: ${now.getHours()}` ); 	
+	//------------------------------------------
+	
+	num1 = parseInt(prompt('Sum 2 numbers - Enter first number: '));
+	num2 = parseInt(prompt('Sum 2 numbers - Enter second number: '));
+	alert( `Sum 2 numbers - ${num1} + ${num2} = ${num1+num2}`); 
+	console.log( `Sum 2 numbers - ${num1} + ${num2} = ${num1+num2}`); 
+	//------------------------------------------
+	
+	num1 = parseInt(prompt('Validate the input - Enter first number: '));
+	if (isNaN(num1))
+	{
+		alert("Validate the input - Not number 1");
+		console.log("Validate the input - Not number 1");		
+	}
+	else
+	{
+		num2 = parseInt(prompt('Validate the input - Enter second number: '));
+		if (isNaN(num2)) {
+			alert("Validate the input - Not number 2");
+			console.log("Validate the input - Not number 2");
+		}
+	};	
+	//------------------------------------------
+
+
+	i = 0; 
+	word = prompt('Write each letter of a word - Enter a word: ', ' ');
+	for (; i < word.length; i++) 
+	{
+	    if (word[i]!==" " ) 
+		alert(` Write each letter of a word - ${word[i]}`);
+		console.log(`Write each letter of a word - ${word[i]}`);
+			
+	};
+	//------------------------------------------
+
+	i = 0; num1=0;
+	word = prompt('Get the number of letters in a word - Enter a word: ', ' ');
+	for (; i < word.lengsth; i++) 
+	{
+	    if (word[i]!==" " ) num1++;
+	};
+	alert(`Get the number of letters in a word - ${num1}`);
+	console.log(`Get the number of letters in a word - ${num1}`);	
+	//------------------------------------------
+		
+	word = prompt('Write the reverse of word - Enter a word : ', ' ');
+	
+	for (var i=word.length-1; i >= 0; i--) 
+	{
+	    if (word[i]!==" " ) newword+=word[i];		
+	};
+	alert(`Write the reverse of word - ${newword}`);
+	console.log(`Write the reverse of word - ${newword}`);
+	
+	//------------------------------------------
+
+	num1 = parseInt(prompt('Sum of odd numbers - Enter a number: '));
+	num2 = 0;
+	for (i=1; i <= num1; i++) 
+	{
+	    if (i % 2) num2=num2+i;		
+	};
+	alert(`Sum of odd numbers - ${num2}`);
+	console.log(`Sum of odd numbers - ${num2}`);
+
+  </script>
+
+ 
 </body>
 </html>
